--- a/style.css
+++ b/style.css
@@ -51,3 +51,11 @@
     background-color: black;
     color: rgb(255, 255, 255);
 } */
+
+.form-control:invalid {
+    border-color: red;
+}
+
+.form-control:valid {
+    border-color: green;
+}
